--- a/views/login.html
+++ b/views/login.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <div class="header-top">
-            <a href="/"><img src="/img/logo-mercado-liebre.svg" class="logo" alt="Logo"></a>
+            <a href="/" class="logo"><img src="/img/logo-mercado-liebre.svg" class="img-logo" alt="Logo"></a>
             <div class="buscar">
                 <input type="texto" name="busqueda" placeholder="Buscar productos, marcas...">
-                <span class="btn">
+                <button type="search" class="btn">
                     <i class="fas fa-search"></i>
-                </span>
+                </button>
             </div>
             <div>
                 <h2 class="frase-top">
@@ -59,26 +59,26 @@
     </main>
     <footer>
         <div class="div-footer">
-            <div>
+            <div class="div-footer-1">
                 <div class="icons-footer"><i class="fas fa-credit-card"></i></div>
                 <h4>Pagá con tarjeta o en efectivo</h4>
                 <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.
                     ¡Y siempre es
                     seguro!</p>
             </div>
-            <div>
+            <div class="div-footer-2">
                 <div class="icons-footer"><i class="fas fa-gift"></i></div>
                 <h4>Envío gratis desde $2.500</h4>
                 <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un
                     beneficio de
                     Mercado Puntos.</p>
             </div>
-            <div>
+            <div class="div-footer-3">
                 <div class="icons-footer"><i class="fas fa-user-shield"></i></div>
-            <h4>Seguridad, de principio a fin</h4>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-                siempre
-                protegid@.</p>
+                <h4>Seguridad, de principio a fin</h4>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
+                    siempre
+                    protegid@.</p>
             </div>
         </div>
         <div class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</div>
