--- a/views/home.html
+++ b/views/home.html
@@ -42,11 +42,13 @@
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>
+        <form action="" method="">
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+        </form>
     </header>
-    <img src="/img/img-home-banner.jpg" alt="Banner">
+    <img src="/img/img-home-banner.jpg" alt="Banner" class="banner">
     <main>
         <section>
             <h3>Basado en tu última visita</h3>
