--- a/views/login.html
+++ b/views/login.html
@@ -42,9 +42,11 @@
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>
+        <form action="" method="">
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+        </form>
     </header>
     <main>
         <form action="/" method="" class="login">
