--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,7 @@ h3{
     font-size: 16px;
     border: 1px solid silver;
     border-radius: 5px;
+    outline: none;
 }
 
 .frase-top{
@@ -191,6 +192,7 @@ main section article i{
     border: none;
     border-radius: 5px;
     padding: 7px;
+    outline: none;
 }
 
 .login p{
@@ -235,6 +237,11 @@ p.perfiles{
 p label.categorias{
     font-weight: 300;
     padding-left: 20px;
+}
+
+.texto:focus{
+    box-shadow: 5px 5px 10px rgb(100, 100, 100);
+    transition: all 300ms;
 }
 
 @media (min-width: 481px) {
