modfique tamaño banner

--- a/views/home.html
+++ b/views/home.html
@@ -21,11 +21,11 @@
                     <i class="fas fa-search"></i>
                 </button>
             </div>
-                <h2 class="frase-top">
-                    <i class="fas fa-hand-holding-usd">
-                    </i>Comprá en cuotas y sin tarjeta de
-                    crédito
-                </h2>
+            <h2 class="frase-top">
+                <i class="fas fa-hand-holding-usd">
+                </i>Comprá en cuotas y sin tarjeta de
+                crédito
+            </h2>
         </div>
         <nav class="opciones">
             <ul>
@@ -46,7 +46,9 @@
             </div>
         </form>
     </header>
-    <img src="/img/img-home-banner.jpg" alt="Banner" class="banner">
+    <div>
+        <img src="/img/img-home-banner.jpg" alt="Banner" class="banner">
+    </div>
     <main>
         <section>
             <h3>Basado en tu última visita</h3>
