--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
             </ul>
             <ul>
                 <li><a href="/registro">Creá tu cuenta <i class="far fa-address-card"></i></a></li>
-                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/ingresar">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
