--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,113 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head')%>
 
-    <body>
-        <%- include('./partials/header')%>
-            <div>
-                <img src="/img/img-home-banner.jpg" alt="Banner" class="banner">
-            </div>
-            <main>
-                <section>
-                    <h3>Basado en tu última visita</h3>
-                    <div class="ultima-visita">
-                        <article class="articulo-1">
-                            <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$6.770</p>
-                                    <p class="descuento">40% OFF</p>
-                                </div>
-                                <h4 class="producto">Cafetera Moulinex</h4>
+<head>
+    <%- include('./partials/head')%>
+    <title>Mercado Liebre</title>
+</head>
+
+<body>
+    <%- include('./partials/header')%>
+        <div>
+            <img src="/img/img-home-banner.jpg" alt="Banner" class="banner">
+        </div>
+        <main>
+            <section>
+                <h3>Basado en tu última visita</h3>
+                <div class="ultima-visita">
+                    <article class="articulo-1">
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$6.770</p>
+                                <p class="descuento">40% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-2">
-                            <img src="/img/img-macbook-pro-2019.jpg" alt="Macbook">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$230.000</p>
-                                    <p class="descuento">20% OFF</p>
-                                </div>
-                                <h4 class="producto">MacBook Pro 2019</h4>
+                            <h4 class="producto">Cafetera Moulinex</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-2">
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="Macbook">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-3">
-                            <img src="/img/img-samsung-galaxy-s10.jpg" alt="Galaxy S10">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$70.500</p>
-                                    <p class="descuento">10% OFF</p>
-                                </div>
-                                <h4 class="producto">Samsung Galaxy S10</h4>
+                            <h4 class="producto">MacBook Pro 2019</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-3">
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="Galaxy S10">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-4">
-                            <img src="/img/img-tv-samsung-smart.jpg" alt="Smart TV">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$23.200</p>
-                                    <p class="descuento">5% OFF</p>
-                                </div>
-                                <h4 class="producto">SmartTv Samsung 43"</h4>
+                            <h4 class="producto">Samsung Galaxy S10</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-4">
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="Smart TV">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% OFF</p>
                             </div>
-                        </article>
-                    </div>
-                </section>
-                <section>
-                    <h3>Sección de Ofertas</h3>
-                    <div class="seccion-ofertas">
-                        <article class="articulo-1">
-                            <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$6.770</p>
-                                    <p class="descuento">40% OFF</p>
-                                </div>
-                                <h4 class="producto">Cafetera Moulinex</h4>
+                            <h4 class="producto">SmartTv Samsung 43"</h4>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <section>
+                <h3>Sección de Ofertas</h3>
+                <div class="seccion-ofertas">
+                    <article class="articulo-1">
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$6.770</p>
+                                <p class="descuento">40% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-2">
-                            <img src="/img/img-macbook-pro-2019.jpg" alt="Macbook">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$230.000</p>
-                                    <p class="descuento">20% OFF</p>
-                                </div>
-                                <h4 class="producto">MacBook Pro 2019</h4>
+                            <h4 class="producto">Cafetera Moulinex</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-2">
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="Macbook">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-3">
-                            <img src="/img/img-samsung-galaxy-s10.jpg" alt="Galaxy S10">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$70.500</p>
-                                    <p class="descuento">10% OFF</p>
-                                </div>
-                                <h4 class="producto">Samsung Galaxy S10</h4>
+                            <h4 class="producto">MacBook Pro 2019</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-3">
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="Galaxy S10">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% OFF</p>
                             </div>
-                        </article>
-                        <article class="articulo-4">
-                            <img src="/img/img-tv-samsung-smart.jpg" alt="Smart TV">
-                            <div class="descripcion">
-                                <i class="fas fa-truck"></i>
-                                <div class="precio-descuento">
-                                    <p class="precio">$23.200</p>
-                                    <p class="descuento">5% OFF</p>
-                                </div>
-                                <h4 class="producto">SmartTv Samsung 43"</h4>
+                            <h4 class="producto">Samsung Galaxy S10</h4>
+                        </div>
+                    </article>
+                    <article class="articulo-4">
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="Smart TV">
+                        <div class="descripcion">
+                            <i class="fas fa-truck"></i>
+                            <div class="precio-descuento">
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% OFF</p>
                             </div>
-                        </article>
-                    </div>
-                </section>
-            </main>
-            <%- include('./partials/footer')%>
-    </body>
+                            <h4 class="producto">SmartTv Samsung 43"</h4>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <%- include('./partials/footer')%>
+</body>
 
 </html>
