--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head')%>
+
+<head>
+    <%- include('./partials/head')%>
+    <title>Creá tu cuenta</title>
+</head>
 
     <body>
         <%- include('./partials/header')%>
